// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/gitlabci/extract extractAllPackageFiles() extracts multiple image lines 1`] = `
[
  {
    "deps": [
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "2.5.0",
        "datasource": "docker",
        "depName": "ruby",
        "depType": "image",
        "packageName": "ruby",
        "replaceString": "ruby:2.5.0",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "latest",
        "datasource": "docker",
        "depName": "hadolint/hadolint",
        "depType": "image",
        "packageName": "hadolint/hadolint",
        "replaceString": "hadolint/hadolint:latest",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "latest",
        "datasource": "docker",
        "depName": "docker",
        "depType": "image",
        "packageName": "docker",
        "replaceString": "docker:latest",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "dind",
        "datasource": "docker",
        "depName": "docker",
        "depType": "service-image",
        "packageName": "docker",
        "replaceString": "docker:dind",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "latest",
        "datasource": "docker",
        "depName": "docker",
        "depType": "image",
        "packageName": "docker",
        "replaceString": "docker:latest",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "dind",
        "datasource": "docker",
        "depName": "docker",
        "depType": "service-image",
        "packageName": "docker",
        "replaceString": "docker:dind",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "1.15",
        "datasource": "docker",
        "depName": "image-name-test",
        "depType": "image-name",
        "packageName": "image-name-test",
        "replaceString": "image-name-test:1.15",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "1.15",
        "datasource": "docker",
        "depName": "image-name-test",
        "depType": "image-name",
        "packageName": "image-name-test",
        "replaceString": "image-name-test:1.15",
      },
    ],
    "packageFile": "lib/modules/manager/gitlabci/__fixtures__/gitlab-ci.yaml",
  },
]
`;

exports[`modules/manager/gitlabci/extract extractAllPackageFiles() extracts multiple image lines with comments 1`] = `
[
  {
    "deps": [
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "19.70.8-slim",
        "datasource": "docker",
        "depName": "renovate/renovate",
        "depType": "image-name",
        "packageName": "renovate/renovate",
        "replaceString": "renovate/renovate:19.70.8-slim",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "10.4.11",
        "datasource": "docker",
        "depName": "mariadb",
        "depType": "service-image",
        "packageName": "mariadb",
        "replaceString": "mariadb:10.4.11",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "1.0.0",
        "datasource": "docker",
        "depName": "other/image",
        "depType": "service-image",
        "packageName": "other/image",
        "replaceString": "other/image:1.0.0",
      },
    ],
    "packageFile": "lib/modules/manager/gitlabci/__fixtures__/gitlab-ci.1.yaml",
  },
]
`;

exports[`modules/manager/gitlabci/extract extractAllPackageFiles() extracts multiple included image lines 1`] = `
[
  {
    "deps": [
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "19.70.8-slim",
        "datasource": "docker",
        "depName": "renovate/renovate",
        "depType": "image-name",
        "packageName": "renovate/renovate",
        "replaceString": "renovate/renovate:19.70.8-slim",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "10.4.11",
        "datasource": "docker",
        "depName": "mariadb",
        "depType": "service-image",
        "packageName": "mariadb",
        "replaceString": "mariadb:10.4.11",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "1.0.0",
        "datasource": "docker",
        "depName": "other/image",
        "depType": "service-image",
        "packageName": "other/image",
        "replaceString": "other/image:1.0.0",
      },
    ],
    "packageFile": "lib/modules/manager/gitlabci/__fixtures__/gitlab-ci.3.yaml",
  },
  {
    "deps": [
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "12",
        "datasource": "docker",
        "depName": "node",
        "depType": "image",
        "packageName": "node",
        "replaceString": "node:12",
      },
    ],
    "packageFile": "lib/modules/manager/gitlabci/__fixtures__/include.1.yml",
  },
  {
    "deps": [
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "3.11",
        "datasource": "docker",
        "depName": "alpine",
        "depType": "image",
        "packageName": "alpine",
        "replaceString": "alpine:3.11",
      },
    ],
    "packageFile": "lib/modules/manager/gitlabci/__fixtures__/include.yml",
  },
]
`;

exports[`modules/manager/gitlabci/extract extractAllPackageFiles() extracts multiple named services 1`] = `
[
  {
    "deps": [
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "19.70.8-slim",
        "datasource": "docker",
        "depName": "renovate/renovate",
        "depType": "image-name",
        "packageName": "renovate/renovate",
        "replaceString": "renovate/renovate:19.70.8-slim",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "1.0.0",
        "datasource": "docker",
        "depName": "other/image1",
        "depType": "service-image",
        "packageName": "other/image1",
        "replaceString": "other/image1:1.0.0",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "1.0.0",
        "datasource": "docker",
        "depName": "other/image2",
        "depType": "service-image",
        "packageName": "other/image2",
        "replaceString": "other/image2:1.0.0",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": "sha256:a5a65569456f221ee1f8a0b3b4e2d440eb5830772d9440c9b30b1dbfd454c778",
        "currentValue": "12.3-1",
        "datasource": "docker",
        "depName": "mooseagency/postgresql",
        "depType": "service-image",
        "packageName": "mooseagency/postgresql",
        "replaceString": "mooseagency/postgresql:12.3-1@sha256:a5a65569456f221ee1f8a0b3b4e2d440eb5830772d9440c9b30b1dbfd454c778",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "10.4.11",
        "datasource": "docker",
        "depName": "mariadb",
        "depType": "service-image",
        "packageName": "mariadb",
        "replaceString": "mariadb:10.4.11",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "11.7",
        "datasource": "docker",
        "depName": "postgres",
        "depType": "service-image",
        "packageName": "postgres",
        "replaceString": "postgres:11.7",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "latest",
        "datasource": "docker",
        "depName": "redis",
        "depType": "service-image",
        "packageName": "redis",
        "replaceString": "redis:latest",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "latest",
        "datasource": "docker",
        "depName": "registry.example.com/myimage",
        "depType": "service-image",
        "packageName": "registry.example.com/myimage",
        "replaceString": "registry.example.com/myimage:latest",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": "sha256:0ecb2ad60",
        "currentValue": undefined,
        "datasource": "docker",
        "depName": "myimage",
        "depType": "service-image",
        "packageName": "myimage",
        "replaceString": "myimage@sha256:0ecb2ad60",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "7-jre8",
        "datasource": "docker",
        "depName": "tomcat",
        "depType": "service-image",
        "packageName": "tomcat",
        "replaceString": "tomcat:7-jre8",
      },
    ],
    "packageFile": "lib/modules/manager/gitlabci/__fixtures__/gitlab-ci.6.yaml",
  },
]
`;

exports[`modules/manager/gitlabci/extract extractAllPackageFiles() extracts named services 1`] = `
[
  {
    "deps": [
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "19.70.8-slim",
        "datasource": "docker",
        "depName": "renovate/renovate",
        "depType": "image-name",
        "packageName": "renovate/renovate",
        "replaceString": "renovate/renovate:19.70.8-slim",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "10.4.11",
        "datasource": "docker",
        "depName": "mariadb",
        "depType": "service-image",
        "packageName": "mariadb",
        "replaceString": "mariadb:10.4.11",
      },
      {
        "autoReplaceStringTemplate": "{{depName}}{{#if newValue}}:{{newValue}}{{/if}}{{#if newDigest}}@{{newDigest}}{{/if}}",
        "currentDigest": undefined,
        "currentValue": "1.0.0",
        "datasource": "docker",
        "depName": "other/image",
        "depType": "service-image",
        "packageName": "other/image",
        "replaceString": "other/image:1.0.0",
      },
    ],
    "packageFile": "lib/modules/manager/gitlabci/__fixtures__/gitlab-ci.5.yaml",
  },
]
`;
